feat: get and post written in pt in swagger
