# docs/swagger.yaml
@@ -1,14 +1,6 @@
 basePath: /api/v1
 definitions:
-  v1.Error:
-    properties:
-      error: {}
-      validation_errors:
-        items:
-          $ref: '#/definitions/v1.ValidationError'
-        type: array
-    type: object
-  v1.Rulesheet:
+  github_com_bancodobrasil_featws-api_payloads_v1.Rulesheet:
     properties:
       description:
         type: string
@@ -38,6 +30,14 @@ definitions:
     required:
     - name
     type: object
+  v1.Error:
+    properties:
+      error: {}
+      validation_errors:
+        items:
+          $ref: '#/definitions/v1.ValidationError'
+        type: array
+    type: object
   v1.ValidationError:
     properties:
       error:
@@ -53,8 +53,15 @@ info:
     email: support@swagger.io
     name: API Support
     url: http://www.swagger.io/support
-  description: API Project to provide operations to manage FeatWS knowledge repositories
-    rules
+  description: |
+    Este projeto consiste em uma API cujo objetivo é fornecer operações para gerenciamento de repositórios e folhas de regra do sistema FeatWS. Através da API, é possível interagir entre a interface de usuário (UI) e o banco de dados, permitindo diversas interações, como as seguintes:
+    - [Post] Criação da Folha de Regra;
+    - [Get] Listar das Folhas de Regra;
+    - [Get] Obter folha de regra por ID;
+    - [Put] Atualizar uma folha de regra por ID;
+    - [Delete] Deletar uma folha de regra por ID.
+
+    Antes de realizar as requisições no Swagger, é necessário autorizar o acesso clicando no botão **Authorize**, ao lado, e inserindo a senha correspondente. Após inserir o campo **value** e clicar no botão **Authorize**, o Swagger estará disponível para ser utilizado.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
@@ -66,14 +73,27 @@ paths:
     post:
       consumes:
       - application/json
-      description: Create Rulesheet description
+      description: |-
+        Nessa operação cria uma folha de regra no banco de dados do FeatWS. Para realizar a criação é necessário completar a folha de regra, com no mínimo:
+        - **nome** no parâmetro *name*;
+        - **slug** no parâmetro *slug*;
+        - **descrição** no parâmetro *description*.
+
+        ```
+        {
+        "description": "teste no Swagger da API do FeatWS",
+        "name": "teste Swagger API",
+        "slug": "teste_Swagger_API"
+        }
+        ```
+        Ambos esses parâmetros devem ser uma string, ou seja, deve estar entre "aspas". Não é possível ter uma folha de regra com o mesmo nome de outra.
       parameters:
       - description: Rulesheet body
         in: body
         name: Rulesheet
         required: true
         schema:
-          $ref: '#/definitions/v1.Rulesheet'
+          $ref: '#/definitions/github_com_bancodobrasil_featws-api_payloads_v1.Rulesheet'
       produces:
       - application/json
       responses:
@@ -84,7 +104,7 @@ paths:
               description: token access
               type: string
           schema:
-            $ref: '#/definitions/v1.Rulesheet'
+            $ref: '#/definitions/github_com_bancodobrasil_featws-api_payloads_v1.Rulesheet'
         "400":
           description: Bad Format
           schema:
@@ -102,14 +122,20 @@ paths:
       security:
       - Authentication Api Key: []
       - Authentication Bearer Token: []
-      summary: Create Rulesheet
+      summary: Criação de Folha de Regra
       tags:
       - Rulesheet
   /rulesheets/:
     get:
       consumes:
       - application/json
-      description: List Rulesheet description
+      description: |-
+        É possível listar as folhas de regra de algumas maneiras como veremos a seguir:
+
+        - **Sem nenhum parâmetro:** Ao realizar a chamada do endpoint sem a passagem de parâmetros, todas as folhas de regra existentes serão retornadas, contendo informações como nome, ID, e caso estejam disponíveis, descrição e slug.
+        - **Usando o *count*:** Ao habilitar o *count* para *True* será retornado do endpoint o número de Folhas de Regras existentes.
+        - **Usando o *limit*:** Ao utilizar o parâmetro *limit* deve-se especificar o número máximo de respostas desejadas que serão retornadas pela array.
+        - **Usando o *page*:** Ao utilizar o parâmetro *page*, serão retornadas as folhas de regra correspondentes a essa página, onde as folhas são ordenadas em ordem crescente pelo seu ID.
       parameters:
       - description: Total of results
         in: query
@@ -134,7 +160,7 @@ paths:
               type: string
           schema:
             items:
-              $ref: '#/definitions/v1.Rulesheet'
+              $ref: '#/definitions/github_com_bancodobrasil_featws-api_payloads_v1.Rulesheet'
             type: array
         "400":
           description: Bad Format
@@ -153,7 +179,7 @@ paths:
       security:
       - Authentication Api Key: []
       - Authentication Bearer Token: []
-      summary: List Rulesheets
+      summary: Listar as Folhas de Regra
       tags:
       - Rulesheet
   /rulesheets/{id}:
@@ -219,7 +245,7 @@ paths:
               type: string
           schema:
             items:
-              $ref: '#/definitions/v1.Rulesheet'
+              $ref: '#/definitions/github_com_bancodobrasil_featws-api_payloads_v1.Rulesheet'
             type: array
         "400":
           description: Bad Format
@@ -256,7 +282,7 @@ paths:
         name: rulesheet
         required: true
         schema:
-          $ref: '#/definitions/v1.Rulesheet'
+          $ref: '#/definitions/github_com_bancodobrasil_featws-api_payloads_v1.Rulesheet'
       produces:
       - application/json
       responses:
@@ -268,7 +294,7 @@ paths:
               type: string
           schema:
             items:
-              $ref: '#/definitions/v1.Rulesheet'
+              $ref: '#/definitions/github_com_bancodobrasil_featws-api_payloads_v1.Rulesheet'
             type: array
         "400":
           description: Bad Format
